syntax = "proto3";

package testsgen;

import "util.proto";

service TestsGenService {
    rpc GenerateFileTests(FileRequest) returns(stream TestsResponse) {}
    rpc GenerateLineTests(LineRequest) returns(stream TestsResponse) {}
    rpc GetFunctionReturnType(FunctionRequest) returns(FunctionTypeResponse) {}
    rpc GeneratePredicateTests(PredicateRequest) returns(stream TestsResponse) {}
    rpc GenerateFunctionTests(FunctionRequest) returns(stream TestsResponse) {}
    rpc GenerateClassTests(ClassRequest) returns(stream TestsResponse) {}
    rpc GenerateFolderTests(FolderRequest) returns(stream TestsResponse) {}
    rpc GenerateSnippetTests(SnippetRequest) returns(stream TestsResponse) {}
    rpc GenerateProjectTests(ProjectRequest) returns(stream TestsResponse) {}
    rpc GenerateAssertionFailTests(AssertionRequest) returns(stream TestsResponse) {}
    rpc ConfigureProject(ProjectConfigRequest) returns(stream ProjectConfigResponse) {}
    rpc Handshake(DummyRequest) returns(DummyResponse) {}
    rpc Heartbeat(DummyRequest) returns(HeartbeatResponse) {}
    rpc CreateTestsCoverageAndResult(CoverageAndResultsRequest) returns(stream CoverageAndResultsResponse) {}
    rpc RegisterClient(RegisterClientRequest) returns(DummyResponse) {}
    rpc OpenGTestChannel(LogChannelRequest) returns(stream LogEntry) {}
    rpc CloseGTestChannel(DummyRequest) returns(DummyResponse) {}
    rpc GetProjectTargets(ProjectTargetsRequest) returns(ProjectTargetsResponse) {}
    rpc OpenLogChannel(LogChannelRequest) returns(stream LogEntry) {}
    rpc CloseLogChannel(DummyRequest) returns(DummyResponse) {}
}

message ProjectTarget {
    string name = 1;
    string path = 2;
    string description = 3;
}

message ProjectTargetsRequest {
    ProjectContext projectContext = 1;
}

message ProjectTargetsResponse {
    repeated ProjectTarget targets = 1;
    ProjectTarget priorityTarget = 2;
}

message LogChannelRequest {
    string logLevel = 2;
}

message LogEntry {
    string message = 1;
}

message RegisterClientRequest {
    string clientId = 1;
}

message CoverageAndResultsRequest {
    ProjectContext projectContext = 1;
    SettingsContext settingsContext = 2;
    TestFilter testFilter = 3;
    bool coverage = 4;
}

message FileCoverageSimplified {
    string filePath = 1;
    repeated SourceRange coveredRanges = 2;
    repeated SourceRange uncoveredRanges = 3;
}

message SourceRange {
    SourcePosition start = 1;
    SourcePosition end = 2;
}

message SourcePosition {
    uint32 line = 1;
    uint32 character = 2;
}

message TestFilter {
    string testFilePath = 1;
    string testName = 2;
    string testSuite = 3;
}

message CoverageAndResultsResponse {
    repeated TestResultObject testRunResults = 1;
    repeated FileCoverageSimplified coverages = 2;
    Progress progress = 3;
    string errorMessage = 4;
}

message TestResultObject {
    string testFilePath = 1;
    string testname = 2;
    TestStatus status = 3;
    string output = 4;
}

enum TestStatus {
    TEST_PASSED = 0;
    TEST_FAILED = 1;
    TEST_DEATH = 2;
    TEST_INTERRUPTED = 3;
}

message DummyRequest {}

message DummyResponse {}

message HeartbeatResponse {
    bool linked = 1;
}

message FolderRequest {
    ProjectRequest projectRequest = 1;
    string folderPath = 2;
}

enum ConfigMode {
    CHECK = 0;
    CREATE_BUILD_DIR = 1;
    GENERATE_JSON_FILES = 2;
}

enum ProjectConfigStatus {
    IS_OK = 0;
    BUILD_DIR_NOT_FOUND = 1;
    COMPILE_COMMANDS_JSON_NOT_FOUND = 2;
    LINK_COMMANDS_JSON_NOT_FOUND = 3;
    BUILD_DIR_CREATION_FAILED = 4;
    RUN_JSON_GENERATION_FAILED = 5;
}

message ProjectConfigRequest {
    ProjectContext projectContext = 1;
    ConfigMode configMode = 2;
    string cmakeOptions = 3;
}

message ProjectConfigResponse {
    ProjectConfigStatus type = 1;
    string message = 2;
    Progress progress = 3;
}

message ProjectContext {
    string projectName = 1;
    string projectPath = 2;
    string testDirPath = 3;
    string buildDirRelativePath = 4;
    string resultsDirRelativePath = 5;
}

message SettingsContext {
    bool generateForStaticFunctions = 1;
    bool verbose = 2;
    int32 timeoutPerFunction = 3;
    int32 timeoutPerTest = 4;
    bool useDeterministicSearcher = 5;
    bool useStubs = 6;
}

message ProjectRequest {
    ProjectContext projectContext = 1;
    SettingsContext settingsContext = 2;
    repeated string sourcePaths = 3;
    bool synchronizeCode = 4;
    string targetPath = 5;
}

message FileRequest {
    ProjectRequest projectRequest = 1;
    string filePath = 2;
}

message LineRequest {
    ProjectRequest projectRequest = 1;
    SourceInfo sourceInfo = 2;
}

message FunctionRequest {
    LineRequest lineRequest = 1;
}

message FunctionTypeResponse {
    ValidationType validationType = 1;
}

message StubsResponse {
    repeated SourceCode stubSources = 1;
    Progress progress = 2;
}

message TestsResponse {
    repeated SourceCode testSources = 1;
    StubsResponse stubs = 2;
    Progress progress = 3;
}

message PredicateRequest {
    LineRequest lineRequest = 1;
    PredicateInfo predicateInfo = 2;
}

message ClassRequest {
    LineRequest lineRequest = 1;
}

message SnippetRequest {
    ProjectContext projectContext = 1;
    SettingsContext settingsContext = 2;
    string filePath = 3;
}

message AssertionRequest {
    LineRequest lineRequest = 1;
}
